--- a/src/Components/Top/Top.scss
+++ b/src/Components/Top/Top.scss
@@ -6,6 +6,8 @@
   flex-direction: column;
   height: 100%;
   width: 100%;
+  border-top-left-radius: 5px;   
+  border-top-right-radius: 5px;   
   background: $topBackgroundColor;
 
   .title {
