--- a/src/Components/Bottom/Bottom.scss
+++ b/src/Components/Bottom/Bottom.scss
@@ -9,3 +9,9 @@
   background-size: cover;
   background-repeat: no-repeat;
 }
+
+.bottom--container_shadow {
+  width: 100%;
+  height: 100%;
+  background: rgba(32, 55, 105, 0.315);
+}
