--- a/src/Components/Top/Weather/Weather.scss
+++ b/src/Components/Top/Weather/Weather.scss
@@ -1,3 +1,5 @@
+@import '../../../SCSS/Colors.scss';
+
 .weather--container {
   display: flex;
   flex-direction: column;
@@ -6,19 +8,31 @@
 
   margin: 5px 0;
 
-  .location {
-  }
+  // .location {
+  //   color: $main-fontColor;
+  // }
 
   .weather--stats {
     margin: 5px 0;
     width: 100%;
     display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: center;
+
+    @media all and (min-width: 640px) {
+      flex-direction: row;
+      justify-content: space-evenly;
+    }
 
     .weather--img {
-      height: 80px;
-      width: 80px;
+      height: 150px;
+      width: 150px;
+
+      @media all and (min-width: 640px) {
+        height: 80px;
+        width: 80px;
+      }
+
       img {
         height: 100%;
         width: 100%;
@@ -29,12 +43,18 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      font-size: 2.5rem;
-      height: 80px;
-      width: 80px;
+      font-size: 5rem;
+      height: 150px;
+      width: 150px;
+
+      @media all and (min-width: 640px) {
+        height: 80px;
+        width: 80px;
+        font-size: 2.5rem;
+      }
 
       &::after {
-          content: "\00b0";
+        content: '\00b0';
       }
     }
   }
