--- a/src/Components/Top/Weather/Weather.scss
+++ b/src/Components/Top/Weather/Weather.scss
@@ -2,18 +2,14 @@
 
 .weather--container {
   display: flex;
+  margin: 20px 0 5px 0;
+  height: 80%;
   flex-direction: column;
   align-items: center;
   width: 200px;
 
-  margin: 5px 0;
-
-  // .location {
-  //   color: $main-fontColor;
-  // }
-
   .weather--stats {
-    margin: 5px 0;
+    margin: 10px 0;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -44,7 +40,7 @@
       justify-content: center;
       align-items: center;
       font-size: 5rem;
-      height: 150px;
+      height: 90px;
       width: 150px;
 
       @media all and (min-width: 640px) {
