--- a/src/Components/Top/Button/Popup.scss
+++ b/src/Components/Top/Button/Popup.scss
@@ -13,12 +13,14 @@
   box-shadow: 0 0 3px 1px rgba(15, 15, 15, 0.3);
   border-radius: 5px;
   transition: all 0.2s ease-in-out;
+z-index: 2;
 
   @media all and (min-width: 640px) {
     position: fixed;
     height: 50%;
     width: 50%;
     top: 5% !important;
+    
   }
 
   .popup--close {
