--- a/src/SCSS/Colors.scss
+++ b/src/SCSS/Colors.scss
@@ -1,6 +1,8 @@
 $topBackgroundColor: rgb(68, 90, 113);
 $bottomBackgroundColor: rgb(63, 107, 148);
 $popupBackgroundColor: rgba(45, 50, 80, 0.9);
+$forecastDayBackgroundColor: rgba(45, 50, 80, 0.7);
+$lineColor: rgba(194, 194, 194, 0.4);
 
 $main-fontColor: rgb(255, 255, 255);
 $main-backgroundColor: rgb(173, 215, 229);
