--- a/src/Components/Top/Button/Popup.scss
+++ b/src/Components/Top/Button/Popup.scss
@@ -38,7 +38,7 @@ z-index: 2;
       position: absolute;
       height: 25px;
       // width: 1px;
-      border: 1px solid $main-buttonColor;
+      border: 1px solid $main-exitButtonColor;
       transition: all 0.3s ease-in-out;
       left: calc(45%);
     }
