--- a/src/Components/Bottom/Bottom.scss
+++ b/src/Components/Bottom/Bottom.scss
@@ -8,8 +8,8 @@
   position: relative;
   height: 100%;
   border-bottom-left-radius: 5px;   
-  border-bottom-right-radius: 5px;   
-  background: url("../../Assets/Thailand_small.jpg");
+  border-bottom-right-radius: 5px;
+  background: url("../../Assets/clouds_small.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -18,6 +18,7 @@
     justify-content: center;
     flex-direction: row;
     justify-content: space-around;
+    background: none;
   }
 }
 
@@ -26,4 +27,6 @@
   width: 100%;
   height: 100%;
   background: rgba(32, 55, 105, 0.315);
+  border-bottom-left-radius: 5px;   
+  border-bottom-right-radius: 5px;
 }
