--- a/src/SCSS/Colors.scss
+++ b/src/SCSS/Colors.scss
@@ -1,4 +1,4 @@
-$topBackgroundColor: rgb(68, 90, 113);
+$topBackgroundColor: rgba(68, 90, 113, .4);
 $bottomBackgroundColor: rgb(63, 107, 148);
 $popupBackgroundColor: rgba(45, 50, 80, 0.9);
 $forecastDayBackgroundColor: rgba(45, 50, 80, 0.7);
@@ -6,9 +6,10 @@ $lineColor: rgba(194, 194, 194, 0.4);
 
 $main-fontColor: rgb(255, 255, 255);
 $main-backgroundColor: rgb(173, 215, 229);
-$main-buttonColor: rgb(8, 177, 180);
-$hover-buttonColor: rgb(5, 120, 122);
-$main-borderColor: rgb(190, 231, 231);
+$main-buttonColor: rgb(51, 60, 99);
+$hover-buttonColor: rgb(74, 96, 167);
+$main-borderColor: rgb(129, 125, 163);
 
 $secondary-fontColor: rgb(128, 128, 128);
 
+$main-exitButtonColor: rgb(184, 187, 204);
