v 1.2 more stats added

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,7 @@
 
 * {
   box-sizing: border-box;
-  font-family: 'Calibri', 'sans-serif';
+  font-family: 'Calibri Light', 'sans-serif';
   color: $main-fontColor;
 }
 
