--- a/src/Components/Top/Weather/Weather.scss
+++ b/src/Components/Top/Weather/Weather.scss
@@ -1,12 +1,32 @@
 @import '../../../SCSS/Colors.scss';
-
+.weather {
+  text-align: center;
+}
+.weather--boxes {
+  display: flex;
+  flex-direction: column;
+  
+  @media all and (min-width: 640px) {
+    flex-direction: row;
+  }
+}
 .weather--container {
   display: flex;
-  margin: 20px 0 5px 0;
+  margin: 10px 0 10px 0;
   height: 80%;
   flex-direction: column;
   align-items: center;
-  width: 200px;
+  width: 100%;
+  padding: 5px;
+  border-bottom: 1px solid rgba(66, 60, 60, 0.3);
+
+  @media all and (min-width: 640px) {
+    margin: 10px 30px 10px 30px;
+    padding: 10px;
+    box-shadow: 0 0 3px 1px rgba(66, 60, 60, 0.3); 
+    border-radius: 5px;
+    border-bottom: none;
+  }
 
   .weather--stats {
     margin: 10px 0;
@@ -21,8 +41,8 @@
     }
 
     .weather--img {
-      height: 150px;
-      width: 150px;
+      height: 100px;
+      width: 100px;
 
       @media all and (min-width: 640px) {
         height: 80px;
@@ -39,9 +59,9 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      font-size: 5rem;
-      height: 90px;
-      width: 150px;
+      font-size: 4rem;
+      height: 70px;
+      width: 100%px;
 
       @media all and (min-width: 640px) {
         height: 80px;
@@ -54,4 +74,33 @@
       }
     }
   }
+
+}
+
+.description {
+   
+  height: inherit;
+  align-items: flex-start;
+  justify-content: space-evenly;
+  font-size: 1.5rem;
+  
+  @media all and (min-width: 640px) {
+    font-size: 1rem;
+  }
+ ;
+  
+}
+
+.temp{
+
+  &::after {
+    content: '\00b0';
+  }
+}
+
+.last--update {
+  margin: 10px;
+font-size: .8rem;
+color: fade-out($main-fontColor, .5)
+
 }
