--- a/src/Components/Bottom/Bottom.scss
+++ b/src/Components/Bottom/Bottom.scss
@@ -12,7 +12,7 @@
   background: url("../../Assets/clouds_small.jpg");
   background-position: center;
   background-size: cover;
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   
   @media all and (min-width: 640px) {
     justify-content: center;
