--- a/src/Components/Bottom/ForecastDay/ForecastDay.scss
+++ b/src/Components/Bottom/ForecastDay/ForecastDay.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 300px;
+  height: 320px;
   width: 95%;
   margin: 10px 0 0 0;
   border-radius: 5px;
@@ -13,6 +13,9 @@
   background: $forecastDayBackgroundColor;
   font-size: 1.3rem;
   z-index: 1;
+  &:last-of-type {
+    margin-bottom: 20px;
+  }
 
   @media all and (min-width: 640px) {
     padding: 10px 5px 0 5px;
@@ -20,6 +23,9 @@
     height: 200px;
     width: 140px;
     font-size: .8rem;
+    &:last-of-type {
+      margin-bottom: 0;
+    }
   }
 
   img {
@@ -33,7 +39,7 @@
     justify-content: space-between;
     align-items: center;
     text-align: center;
-    height: 100px;
+    height: 150px;
   }
 }
 
