--- a/src/Components/Bottom/ForecastDay/ForecastDay.scss
+++ b/src/Components/Bottom/ForecastDay/ForecastDay.scss
@@ -40,6 +40,12 @@
     align-items: center;
     text-align: center;
     height: 150px;
+
+    .weather--description {
+      @media all and (min-width: 640px) {
+        font-size: .8rem;
+      }
+    }
   }
 }
 
